Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -130,7 +130,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "df['stars_squared'] = df.map(la)"
+    "df['stars_squared'] = df.map(lambda x: )"
    ]
   },
   {
