--- a/index.ipynb
+++ b/index.ipynb
@@ -125,12 +125,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "df['stars_squared'] = df.map(lambda x: )"
+    "df['stars_squared'] = df.stars.map(lambda x: x**2)"
    ]
   },
   {
