--- a/index.ipynb
+++ b/index.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -237,6 +237,71 @@
        "      <td>TlvV-xJhmh7LCwJYXkV-cg</td>\n",
        "      <td>25</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>UBv8heCQR0RPnUQG0zkXIQ</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2016-09-23</td>\n",
+       "      <td>0</td>\n",
+       "      <td>HkYqGb0Gplmmk-xlHTRBoA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>The score should be negative. Its HORRIBLE. Th...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NhOc64RsrTT1Dls50yYW8g</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>hdgYnadxg0GANhWOJabr2g</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2014-08-23</td>\n",
+       "      <td>0</td>\n",
+       "      <td>RgqWdZA4xR023iP3T6jVfA</td>\n",
+       "      <td>5</td>\n",
+       "      <td>I went there twice and I am pretty happy with ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NhOc64RsrTT1Dls50yYW8g</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>19</td>\n",
+       "      <td>gZGsReG0VeX4uKViHTB9EQ</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2017-08-16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>51RHs_V_fjuistnuKxNpEg</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Finally! After trying many Mexican restaurants...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5ngpW5tf3ep680eG1HxHzA</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>25</td>\n",
+       "      <td>f-v1fvtnbdw_QQRsCnwH-g</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2017-11-18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>alI_kRKyEHfdHibYGgtJbw</td>\n",
+       "      <td>1</td>\n",
+       "      <td>I have to write a review on the Fractured Prun...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Fc_nb6N6Sdurqb-rwsY1Bw</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>26</td>\n",
+       "      <td>yz66FIUPDKGhILDWzRLeKg</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2017-11-18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>85DRIjwPJOTb4q0qOlBstw</td>\n",
+       "      <td>1</td>\n",
+       "      <td>I wish i could tell you all about the food but...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Fc_nb6N6Sdurqb-rwsY1Bw</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -248,6 +313,11 @@
        "4   Ums3gaP2qM3W1XcA5r6SsQ     0  2014-09-05      0  jsDu6QEJHbwP2Blom1PLCA   \n",
        "5   vgfcTvK81oD4r50NMjU2Ag     0  2011-02-25      0  pfavA0hr3nyqO61oupj-lA   \n",
        "10  yFumR3CWzpfvTH2FCthvVw     0  2016-06-15      0  STiFMww2z31siPY7BWNC2g   \n",
+       "11  UBv8heCQR0RPnUQG0zkXIQ     0  2016-09-23      0  HkYqGb0Gplmmk-xlHTRBoA   \n",
+       "12  hdgYnadxg0GANhWOJabr2g     0  2014-08-23      0  RgqWdZA4xR023iP3T6jVfA   \n",
+       "19  gZGsReG0VeX4uKViHTB9EQ     0  2017-08-16      0  51RHs_V_fjuistnuKxNpEg   \n",
+       "25  f-v1fvtnbdw_QQRsCnwH-g     0  2017-11-18      0  alI_kRKyEHfdHibYGgtJbw   \n",
+       "26  yz66FIUPDKGhILDWzRLeKg     0  2017-11-18      0  85DRIjwPJOTb4q0qOlBstw   \n",
        "\n",
        "    stars                                               text  useful  \\\n",
        "1       5  I love this place! My fiance And I go here atl...       0   \n",
@@ -255,22 +325,32 @@
        "4       5  Delicious healthy food. The steak is amazing. ...       0   \n",
        "5       1  This place sucks. The customer service is horr...       2   \n",
        "10      5  I have been an Emerald Club member for a numbe...       0   \n",
+       "11      1  The score should be negative. Its HORRIBLE. Th...       0   \n",
+       "12      5  I went there twice and I am pretty happy with ...       0   \n",
+       "19      5  Finally! After trying many Mexican restaurants...       0   \n",
+       "25      1  I have to write a review on the Fractured Prun...       0   \n",
+       "26      1  I wish i could tell you all about the food but...       1   \n",
        "\n",
        "                   user_id  stars_squared  \n",
        "1   msQe1u7Z_XuqjGoqhB0J5g             25  \n",
        "2   msQe1u7Z_XuqjGoqhB0J5g              1  \n",
        "4   msQe1u7Z_XuqjGoqhB0J5g             25  \n",
        "5   msQe1u7Z_XuqjGoqhB0J5g              1  \n",
-       "10  TlvV-xJhmh7LCwJYXkV-cg             25  "
+       "10  TlvV-xJhmh7LCwJYXkV-cg             25  \n",
+       "11  NhOc64RsrTT1Dls50yYW8g              1  \n",
+       "12  NhOc64RsrTT1Dls50yYW8g             25  \n",
+       "19  5ngpW5tf3ep680eG1HxHzA             25  \n",
+       "25  Fc_nb6N6Sdurqb-rwsY1Bw              1  \n",
+       "26  Fc_nb6N6Sdurqb-rwsY1Bw              1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df.head(10)"
    ]
   },
   {
