Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -237,266 +237,6 @@
        "      <td>TlvV-xJhmh7LCwJYXkV-cg</td>\n",
        "      <td>25</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <td>11</td>\n",
-       "      <td>UBv8heCQR0RPnUQG0zkXIQ</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2016-09-23</td>\n",
-       "      <td>0</td>\n",
-       "      <td>HkYqGb0Gplmmk-xlHTRBoA</td>\n",
-       "      <td>1</td>\n",
-       "      <td>The score should be negative. Its HORRIBLE. Th...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NhOc64RsrTT1Dls50yYW8g</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>12</td>\n",
-       "      <td>hdgYnadxg0GANhWOJabr2g</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2014-08-23</td>\n",
-       "      <td>0</td>\n",
-       "      <td>RgqWdZA4xR023iP3T6jVfA</td>\n",
-       "      <td>5</td>\n",
-       "      <td>I went there twice and I am pretty happy with ...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NhOc64RsrTT1Dls50yYW8g</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>19</td>\n",
-       "      <td>gZGsReG0VeX4uKViHTB9EQ</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2017-08-16</td>\n",
-       "      <td>0</td>\n",
-       "      <td>51RHs_V_fjuistnuKxNpEg</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Finally! After trying many Mexican restaurants...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5ngpW5tf3ep680eG1HxHzA</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>25</td>\n",
-       "      <td>f-v1fvtnbdw_QQRsCnwH-g</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2017-11-18</td>\n",
-       "      <td>0</td>\n",
-       "      <td>alI_kRKyEHfdHibYGgtJbw</td>\n",
-       "      <td>1</td>\n",
-       "      <td>I have to write a review on the Fractured Prun...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Fc_nb6N6Sdurqb-rwsY1Bw</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>26</td>\n",
-       "      <td>yz66FIUPDKGhILDWzRLeKg</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2017-11-18</td>\n",
-       "      <td>0</td>\n",
-       "      <td>85DRIjwPJOTb4q0qOlBstw</td>\n",
-       "      <td>1</td>\n",
-       "      <td>I wish i could tell you all about the food but...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Fc_nb6N6Sdurqb-rwsY1Bw</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>27</td>\n",
-       "      <td>6qDRqHWqf0EeHupSUEBfKg</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2015-12-10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>GbiLIKmQPVCBtdNkTVdVSA</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Wonderful! One of my favorite places. BBQ is e...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>G22ITfVETYHtIhnn5lLRrQ</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>28</td>\n",
-       "      <td>7AlULGZI1pHt0imODsqdkg</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2012-02-12</td>\n",
-       "      <td>0</td>\n",
-       "      <td>UaHgsL0xS4UnJ_iKqeOk_w</td>\n",
-       "      <td>5</td>\n",
-       "      <td>The price is about the same as Quizinos. The s...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>FjH3TH8OvHGLNEbzdEYlNg</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>29</td>\n",
-       "      <td>th4pZ5LkoIIkb1Vmu_m2DA</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2012-02-12</td>\n",
-       "      <td>0</td>\n",
-       "      <td>c4zzAD1S6721Fh-acCBy-g</td>\n",
-       "      <td>4</td>\n",
-       "      <td>The food was ok. You get a lot of food for the...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>FjH3TH8OvHGLNEbzdEYlNg</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>30</td>\n",
-       "      <td>nsSfCKW9KDB4COj9bzXApw</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2012-02-12</td>\n",
-       "      <td>0</td>\n",
-       "      <td>TTBwocu2mvqJFJrwmJN0Sw</td>\n",
-       "      <td>5</td>\n",
-       "      <td>The staff were friendly and helpful. The food ...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>FjH3TH8OvHGLNEbzdEYlNg</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>31</td>\n",
-       "      <td>cP8ErpZfRzdVR5Fvks-pnQ</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2012-02-12</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-CresnnXQSHrQ85Ogm-Pqw</td>\n",
-       "      <td>5</td>\n",
-       "      <td>The staff were very helpful. We painted potter...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>FjH3TH8OvHGLNEbzdEYlNg</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>32</td>\n",
-       "      <td>Edr6SafmQrZa6CcFuItoqg</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2014-06-03</td>\n",
-       "      <td>0</td>\n",
-       "      <td>U04YgYr4PiGUxB46J4xapg</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Limited vegetarian options. Ordered Greek sala...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>B7Fh30KQT1xPSGt_pIhRRA</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>35</td>\n",
-       "      <td>SpJYus_184M2TdT7t52rIA</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2016-11-18</td>\n",
-       "      <td>0</td>\n",
-       "      <td>s9cpVj40VR_yl0lXbZQe6w</td>\n",
-       "      <td>5</td>\n",
-       "      <td>I trust my vehicles here. Comparable prices. M...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>zx_Op2OAOM_fRic9tU-jqA</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>40</td>\n",
-       "      <td>qdC2h3MqCNussc5lhzL7gg</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2015-11-05</td>\n",
-       "      <td>0</td>\n",
-       "      <td>AJ0IglpYAp2D0daOlVGIdg</td>\n",
-       "      <td>1</td>\n",
-       "      <td>This place doesn't even deserve 1 star. Horrib...</td>\n",
-       "      <td>18</td>\n",
-       "      <td>Ka7TIp74VHSa90rfdg4_2g</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>41</td>\n",
-       "      <td>XgRDG9E_WLEbl8S-QUqQkQ</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2015-11-05</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5D_MsAJHrMa8QKkpE3g1Sg</td>\n",
-       "      <td>5</td>\n",
-       "      <td>The butter burger was cooked perfectly and jui...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Ka7TIp74VHSa90rfdg4_2g</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>42</td>\n",
-       "      <td>awgoBwuhzlLGKEIverTGjQ</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2017-01-21</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5bWN_IN8MQGjJ6_ZIXffDw</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Best location ever! I love love love the manag...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>yyPHK6khPa4-ErV9U32x3A</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>74</td>\n",
-       "      <td>iO3GuIiZxzv-iETGVnoeVA</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2016-11-06</td>\n",
-       "      <td>0</td>\n",
-       "      <td>RW_mYzHYfdqn6g7xVgIcKg</td>\n",
-       "      <td>4</td>\n",
-       "      <td>This was a real fun time. Lots of laughs and e...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0pf5VuzE4_1pwj5NJHG5TQ</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>79</td>\n",
-       "      <td>yz3KtngrF2PQrif8JW7gdw</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2016-05-28</td>\n",
-       "      <td>0</td>\n",
-       "      <td>SLA1YP9doUc8h-6Kd34QmA</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Horrible. The smart ones have closed their acc...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0pf5VuzE4_1pwj5NJHG5TQ</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>83</td>\n",
-       "      <td>T2XdzAcj0M_kBD9_BHfZlw</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2016-05-08</td>\n",
-       "      <td>0</td>\n",
-       "      <td>qxPiEGIHy5xyVy78avH5Rg</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Love the 'old school' ambiance. Friendly staff...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0pf5VuzE4_1pwj5NJHG5TQ</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>92</td>\n",
-       "      <td>AtbXj3Rg1GF6Dj5zu6KCDg</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2012-10-11</td>\n",
-       "      <td>0</td>\n",
-       "      <td>q6ij-nz5d_hvdjuelho1pQ</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Better service and much better prices than the...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>WnM2AmNIint5b5f688nmPg</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>95</td>\n",
-       "      <td>6tSvz_21BMo3a4GaItwa0g</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2017-04-08</td>\n",
-       "      <td>0</td>\n",
-       "      <td>66FSK2J1uHJqVI1Z8QiFGw</td>\n",
-       "      <td>4</td>\n",
-       "      <td>I love how they have no rice sushi options. Th...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Yy_iGXxLpL6tYDQoE-6XVg</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -508,26 +248,6 @@
        "4   Ums3gaP2qM3W1XcA5r6SsQ     0  2014-09-05      0  jsDu6QEJHbwP2Blom1PLCA   \n",
        "5   vgfcTvK81oD4r50NMjU2Ag     0  2011-02-25      0  pfavA0hr3nyqO61oupj-lA   \n",
        "10  yFumR3CWzpfvTH2FCthvVw     0  2016-06-15      0  STiFMww2z31siPY7BWNC2g   \n",
-       "11  UBv8heCQR0RPnUQG0zkXIQ     0  2016-09-23      0  HkYqGb0Gplmmk-xlHTRBoA   \n",
-       "12  hdgYnadxg0GANhWOJabr2g     0  2014-08-23      0  RgqWdZA4xR023iP3T6jVfA   \n",
-       "19  gZGsReG0VeX4uKViHTB9EQ     0  2017-08-16      0  51RHs_V_fjuistnuKxNpEg   \n",
-       "25  f-v1fvtnbdw_QQRsCnwH-g     0  2017-11-18      0  alI_kRKyEHfdHibYGgtJbw   \n",
-       "26  yz66FIUPDKGhILDWzRLeKg     0  2017-11-18      0  85DRIjwPJOTb4q0qOlBstw   \n",
-       "27  6qDRqHWqf0EeHupSUEBfKg     0  2015-12-10      0  GbiLIKmQPVCBtdNkTVdVSA   \n",
-       "28  7AlULGZI1pHt0imODsqdkg     0  2012-02-12      0  UaHgsL0xS4UnJ_iKqeOk_w   \n",
-       "29  th4pZ5LkoIIkb1Vmu_m2DA     0  2012-02-12      0  c4zzAD1S6721Fh-acCBy-g   \n",
-       "30  nsSfCKW9KDB4COj9bzXApw     0  2012-02-12      0  TTBwocu2mvqJFJrwmJN0Sw   \n",
-       "31  cP8ErpZfRzdVR5Fvks-pnQ     0  2012-02-12      0  -CresnnXQSHrQ85Ogm-Pqw   \n",
-       "32  Edr6SafmQrZa6CcFuItoqg     0  2014-06-03      0  U04YgYr4PiGUxB46J4xapg   \n",
-       "35  SpJYus_184M2TdT7t52rIA     0  2016-11-18      0  s9cpVj40VR_yl0lXbZQe6w   \n",
-       "40  qdC2h3MqCNussc5lhzL7gg     0  2015-11-05      0  AJ0IglpYAp2D0daOlVGIdg   \n",
-       "41  XgRDG9E_WLEbl8S-QUqQkQ     0  2015-11-05      0  5D_MsAJHrMa8QKkpE3g1Sg   \n",
-       "42  awgoBwuhzlLGKEIverTGjQ     0  2017-01-21      0  5bWN_IN8MQGjJ6_ZIXffDw   \n",
-       "74  iO3GuIiZxzv-iETGVnoeVA     0  2016-11-06      0  RW_mYzHYfdqn6g7xVgIcKg   \n",
-       "79  yz3KtngrF2PQrif8JW7gdw     0  2016-05-28      0  SLA1YP9doUc8h-6Kd34QmA   \n",
-       "83  T2XdzAcj0M_kBD9_BHfZlw     0  2016-05-08      0  qxPiEGIHy5xyVy78avH5Rg   \n",
-       "92  AtbXj3Rg1GF6Dj5zu6KCDg     0  2012-10-11      0  q6ij-nz5d_hvdjuelho1pQ   \n",
-       "95  6tSvz_21BMo3a4GaItwa0g     0  2017-04-08      0  66FSK2J1uHJqVI1Z8QiFGw   \n",
        "\n",
        "    stars                                               text  useful  \\\n",
        "1       5  I love this place! My fiance And I go here atl...       0   \n",
@@ -535,62 +255,22 @@
        "4       5  Delicious healthy food. The steak is amazing. ...       0   \n",
        "5       1  This place sucks. The customer service is horr...       2   \n",
        "10      5  I have been an Emerald Club member for a numbe...       0   \n",
-       "11      1  The score should be negative. Its HORRIBLE. Th...       0   \n",
-       "12      5  I went there twice and I am pretty happy with ...       0   \n",
-       "19      5  Finally! After trying many Mexican restaurants...       0   \n",
-       "25      1  I have to write a review on the Fractured Prun...       0   \n",
-       "26      1  I wish i could tell you all about the food but...       1   \n",
-       "27      5  Wonderful! One of my favorite places. BBQ is e...       0   \n",
-       "28      5  The price is about the same as Quizinos. The s...       0   \n",
-       "29      4  The food was ok. You get a lot of food for the...       0   \n",
-       "30      5  The staff were friendly and helpful. The food ...       1   \n",
-       "31      5  The staff were very helpful. We painted potter...       0   \n",
-       "32      2  Limited vegetarian options. Ordered Greek sala...       0   \n",
-       "35      5  I trust my vehicles here. Comparable prices. M...       0   \n",
-       "40      1  This place doesn't even deserve 1 star. Horrib...      18   \n",
-       "41      5  The butter burger was cooked perfectly and jui...       0   \n",
-       "42      5  Best location ever! I love love love the manag...       0   \n",
-       "74      4  This was a real fun time. Lots of laughs and e...       0   \n",
-       "79      1  Horrible. The smart ones have closed their acc...       1   \n",
-       "83      4  Love the 'old school' ambiance. Friendly staff...       1   \n",
-       "92      5  Better service and much better prices than the...       0   \n",
-       "95      4  I love how they have no rice sushi options. Th...       0   \n",
        "\n",
        "                   user_id  stars_squared  \n",
        "1   msQe1u7Z_XuqjGoqhB0J5g             25  \n",
        "2   msQe1u7Z_XuqjGoqhB0J5g              1  \n",
        "4   msQe1u7Z_XuqjGoqhB0J5g             25  \n",
        "5   msQe1u7Z_XuqjGoqhB0J5g              1  \n",
-       "10  TlvV-xJhmh7LCwJYXkV-cg             25  \n",
-       "11  NhOc64RsrTT1Dls50yYW8g              1  \n",
-       "12  NhOc64RsrTT1Dls50yYW8g             25  \n",
-       "19  5ngpW5tf3ep680eG1HxHzA             25  \n",
-       "25  Fc_nb6N6Sdurqb-rwsY1Bw              1  \n",
-       "26  Fc_nb6N6Sdurqb-rwsY1Bw              1  \n",
-       "27  G22ITfVETYHtIhnn5lLRrQ             25  \n",
-       "28  FjH3TH8OvHGLNEbzdEYlNg             25  \n",
-       "29  FjH3TH8OvHGLNEbzdEYlNg             16  \n",
-       "30  FjH3TH8OvHGLNEbzdEYlNg             25  \n",
-       "31  FjH3TH8OvHGLNEbzdEYlNg             25  \n",
-       "32  B7Fh30KQT1xPSGt_pIhRRA              4  \n",
-       "35  zx_Op2OAOM_fRic9tU-jqA             25  \n",
-       "40  Ka7TIp74VHSa90rfdg4_2g              1  \n",
-       "41  Ka7TIp74VHSa90rfdg4_2g             25  \n",
-       "42  yyPHK6khPa4-ErV9U32x3A             25  \n",
-       "74  0pf5VuzE4_1pwj5NJHG5TQ             16  \n",
-       "79  0pf5VuzE4_1pwj5NJHG5TQ              1  \n",
-       "83  0pf5VuzE4_1pwj5NJHG5TQ             16  \n",
-       "92  WnM2AmNIint5b5f688nmPg             25  \n",
-       "95  Yy_iGXxLpL6tYDQoE-6XVg             16  "
+       "10  TlvV-xJhmh7LCwJYXkV-cg             25  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head(25)"
+    "df.head()"
    ]
   },
   {
