Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -298,7 +298,7 @@
    "source": [
     "import datetime\n",
     "# Your code here\n",
-    "df.date.date(%m)"
+    "df.date.date(\"\"%m\")"
    ]
   },
   {
