Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -302,7 +302,8 @@
    "source": [
     "import datetime\n",
     "# Your code here\n",
-    "df.date.date(\"%m\")"
+    "type\n",
+    "#df.date.date(\"%m\")"
    ]
   },
   {
