Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,7 @@
    "source": [
     "import datetime\n",
     "# Your code here\n",
-    "df.date\n",
+    "pd.todf.date\n",
     "#df.date.date(\"%m\")"
    ]
   },
