Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,7 @@
    "source": [
     "import datetime\n",
     "# Your code here\n",
-    "pd.to_datetime(df.date)\n",
+    "pd.to_datetime((df.date),fo)\n",
     "#df.date.date(\"%m\")"
    ]
   },
