Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -283,27 +283,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1      2012-11-13\n",
-       "2      2014-10-23\n",
-       "4      2014-09-05\n",
-       "5      2011-02-25\n",
-       "10     2016-06-15\n",
-       "          ...    \n",
-       "689    2013-06-02\n",
-       "4874   2016-08-14\n",
-       "564    2016-06-14\n",
-       "3458   2013-10-02\n",
-       "4206   2016-08-15\n",
-       "Name: date, Length: 2610, dtype: datetime64[ns]"
+       "pandas.core.series.Series"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +301,7 @@
     "import datetime\n",
     "# Your code here\n",
     "pd.to_datetime((df.date))\n",
-    "df.date\n",
+    "type(df.date)\n",
     "#df.date.date(\"%m\")"
    ]
   },
