--- a/index.ipynb
+++ b/index.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,8 +300,8 @@
    "source": [
     "import datetime\n",
     "# Your code here\n",
-    "pd.to_datetime((df.date))\n",
-    "type(df.date)\n",
+    "dfd=pd.to_datetime((df.date))\n",
+    "type(dfd)\n",
     "#df.date.date(\"%m\")"
    ]
   },
