--- a/index.ipynb
+++ b/index.ipynb
@@ -319,7 +319,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n"
    ]
   },
   {
