--- a/index.ipynb
+++ b/index.ipynb
@@ -320,7 +320,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "df.text.map(lambda x: split)\n"
+    "df.text.map(lambda x: x.split())\n"
    ]
   },
   {
