Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -342,7 +342,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "df.text.map(lambda x: len(x.split()))\n"
+    "df[t]df.text.map(lambda x: len(x.split()))\n"
    ]
   },
   {
