--- a/index.ipynb
+++ b/index.ipynb
@@ -332,11 +332,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "df['comment_length'] = df.text.map(lambda x: len(x.split()))\n"
    ]
   },
   {
