Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -333,7 +333,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "df.text.length()\n"
+    "df['comment_length'] = df.text.map(lambda x: len(x.split()))\n"
    ]
   },
   {
