--- a/index.ipynb
+++ b/index.ipynb
@@ -333,7 +333,8 @@
    ],
    "source": [
     "# Your code here\n",
-    "df['comment_length'] = df.text.map(lambda x: len(x.split()))\n"
+    "df['comment_length'] = df.text.map(lambda x: len(x.split()))\n",
+    "df.comment_length.mean"
    ]
   },
   {
