--- a/index.ipynb
+++ b/index.ipynb
@@ -377,7 +377,7 @@
     "        return 'Long'\n",
     "# Hint: nest your if, else conditionals\n",
     "\n",
-    "df['Review_length'] = df.\n"
+    "df['Review_length'] = df.text.map()\n"
    ]
   },
   {
