Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,7 @@
    "source": [
     "import datetime\n",
     "# Your code here\n",
-    "dfd=pd.to_datetime((df.date))\n",
+    "date['date'] =pd.to_datetime((df.date))\n",
     "type(dfd)\n",
     "#df.date.date(\"%m\")"
    ]
