Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -303,7 +303,7 @@
     "import datetime\n",
     "# Your code here\n",
     "df['date'] =pd.to_datetime((df['date']))\n",
-    "df.date.info()\n",
+    "tyoe\n",
     "#df.date.date(\"%m\")"
    ]
   },
