Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -283,25 +283,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "pandas.core.frame.DataFrame"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 2610 entries, 1 to 4206\n",
+      "Data columns (total 11 columns):\n",
+      "business_id       2610 non-null object\n",
+      "cool              2610 non-null int64\n",
+      "date              2610 non-null datetime64[ns]\n",
+      "funny             2610 non-null int64\n",
+      "review_id         2610 non-null object\n",
+      "stars             2610 non-null int64\n",
+      "text              2610 non-null object\n",
+      "useful            2610 non-null int64\n",
+      "user_id           2610 non-null object\n",
+      "stars_squared     2610 non-null int64\n",
+      "comment_length    2610 non-null int64\n",
+      "dtypes: datetime64[ns](1), int64(6), object(4)\n",
+      "memory usage: 244.7+ KB\n"
+     ]
     }
    ],
    "source": [
     "import datetime\n",
     "# Your code here\n",
     "df['date'] =pd.to_datetime((df['date']))\n",
-    "type(df)\n",
+    "df.info()\n",
+    "\n",
     "#df.date.date(\"%m\")"
    ]
   },
