Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -292,27 +292,25 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 2610 entries, 1 to 4206\n",
-      "Data columns (total 11 columns):\n",
-      "business_id       2610 non-null object\n",
-      "cool              2610 non-null int64\n",
-      "date              2610 non-null datetime64[ns]\n",
-      "funny             2610 non-null int64\n",
-      "review_id         2610 non-null object\n",
-      "stars             2610 non-null int64\n",
-      "text              2610 non-null object\n",
-      "useful            2610 non-null int64\n",
-      "user_id           2610 non-null object\n",
-      "stars_squared     2610 non-null int64\n",
-      "comment_length    2610 non-null int64\n",
-      "dtypes: datetime64[ns](1), int64(6), object(4)\n",
-      "memory usage: 244.7+ KB\n"
+      "Data columns (total 9 columns):\n",
+      "business_id    2610 non-null object\n",
+      "cool           2610 non-null int64\n",
+      "date           2610 non-null object\n",
+      "funny          2610 non-null int64\n",
+      "review_id      2610 non-null object\n",
+      "stars          2610 non-null int64\n",
+      "text           2610 non-null object\n",
+      "useful         2610 non-null int64\n",
+      "user_id        2610 non-null object\n",
+      "dtypes: int64(4), object(5)\n",
+      "memory usage: 203.9+ KB\n"
      ]
     }
    ],
    "source": [
     "import datetime\n",
     "# Your code here\n",
-    "df.date.inf"
+    "df.info()"
    ]
   },
   {
