--- a/index.ipynb
+++ b/index.ipynb
@@ -310,7 +310,7 @@
    "source": [
     "import datetime\n",
     "# Your code here\n",
-    "df.date.map(im)"
+    "df.date.map(lambda x:pd)"
    ]
   },
   {
