--- a/index.ipynb
+++ b/index.ipynb
@@ -283,34 +283,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 2610 entries, 1 to 4206\n",
-      "Data columns (total 9 columns):\n",
-      "business_id    2610 non-null object\n",
-      "cool           2610 non-null int64\n",
-      "date           2610 non-null object\n",
-      "funny          2610 non-null int64\n",
-      "review_id      2610 non-null object\n",
-      "stars          2610 non-null int64\n",
-      "text           2610 non-null object\n",
-      "useful         2610 non-null int64\n",
-      "user_id        2610 non-null object\n",
-      "dtypes: int64(4), object(5)\n",
-      "memory usage: 203.9+ KB\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1       11\n",
+       "2       10\n",
+       "4        9\n",
+       "5        2\n",
+       "10       6\n",
+       "        ..\n",
+       "689      6\n",
+       "4874     8\n",
+       "564      6\n",
+       "3458    10\n",
+       "4206     8\n",
+       "Name: date, Length: 2610, dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import datetime\n",
     "# Your code here\n",
-    "df.date.map(lambda x:pd.to_datetime)"
+    "df.date.map(lambda x: pd.to_datetime(x).month)"
    ]
   },
   {
