--- a/index.ipynb
+++ b/index.ipynb
@@ -283,35 +283,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1       11\n",
-       "2       10\n",
-       "4        9\n",
-       "5        2\n",
-       "10       6\n",
-       "        ..\n",
-       "689      6\n",
-       "4874     8\n",
-       "564      6\n",
-       "3458    10\n",
-       "4206     8\n",
-       "Name: date, Length: 2610, dtype: int64"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import datetime\n",
     "# Your code here\n",
-    "date-=df.date.map(lambda x: pd.to_datetime(x).month)"
+    "df['month'] = df.date.map(lambda x: pd.to_datetime(x).month)"
    ]
   },
   {
