Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -377,7 +377,7 @@
     "        return 'Long'\n",
     "# Hint: nest your if, else conditionals\n",
     "\n",
-    "type(df.Value)\n",
+    "type(df.Review_Length)\n",
     "#df['Review_length'] = df.text.map(lambda x: 'Short' if x < 50 else 'Medium' if x < 80 else 'Long')\n"
    ]
   },
