--- a/index.ipynb
+++ b/index.ipynb
@@ -375,7 +375,7 @@
     "        return 'Long'\n",
     "# Hint: nest your if, else conditionals\n",
     "\n",
-    "df['Review_length'] = df.text.map(lambda x: 'Short' if x < 50 else 'Medium' if x < 80 else 'Long')\n"
+    "df['Review_length'] = df.text.map(lambda x: 'Short' if len(x) < 50 else 'Medium' if x < 80 else 'Long')\n"
    ]
   },
   {
