Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -350,20 +350,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pandas.core.series.Series"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Rewrite the following function as a lambda function\n",
     "def rewrite_as_lambda(value):\n",
@@ -375,7 +364,7 @@
     "        return 'Long'\n",
     "# Hint: nest your if, else conditionals\n",
     "\n",
-    "df['Review_length'] = df.text.map(lambda x: 'Short' if len(x) < 50 else 'Medium' if x < 80 else 'Long')\n"
+    "df['Review_length'] = df.text.map(lambda x: 'Short' if len(x) < 50 else 'Medium' if len(x) < 80 else 'Long')\n"
    ]
   },
   {
