--- a/index.ipynb
+++ b/index.ipynb
@@ -607,7 +607,7 @@
     "# Hint: nest your if, else conditionals\n",
     "\n",
     "df['Review_length'] = df.text.map(lambda x: 'Short' if len(x) < 50 else 'Medium' if len(x) < 80 else 'Long')\n",
-    "df\n"
+    "df.count_va\n"
    ]
   },
   {
