Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -448,6 +448,8 @@
     "# Your code here\n",
     "df['date'] = df['date'].dt.strftime('%d/%m/%Y')\n",
     "\n",
+    "\n",
+    "df['comment_length'] = df.text.map(lambda x: len(x.split()))\n",
     "\n"
    ]
   },
