Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -446,10 +446,10 @@
    ],
    "source": [
     "# Your code here\n",
-    "df['date'] = df['date'].dt.strftime('%d/%m/%Y')\n",
-    "df['date'] = df['date'].map(lambda x: x.to_datetime)\n",
-    "\n",
-    "df['comment_length'] = df.text.map(lambda x: len(x.split()))\n",
+    "#df['date'] = df['date'].dt.strftime('%d/%m/%Y')\n",
+    "#df['date'] = df['date'].map(lambda x: x.to_datetime)\n",
+    "type(df.date)\n",
+    "#df['comment_length'] = df.text.map(lambda x: len(x.split()))\n",
     "\n"
    ]
   },
