Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -418,6 +418,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 2610 entries, 1 to 4206\n",
+      "Data columns (total 11 columns):\n",
+      "business_id      2610 non-null object\n",
+      "cool             2610 non-null int64\n",
+      "date             2610 non-null object\n",
+      "funny            2610 non-null int64\n",
+      "review_id        2610 non-null object\n",
+      "stars            2610 non-null int64\n",
+      "text             2610 non-null object\n",
+      "useful           2610 non-null int64\n",
+      "user_id          2610 non-null object\n",
+      "month            2610 non-null int64\n",
+      "Review_length    2610 non-null object\n",
+      "dtypes: int64(5), object(6)\n",
+      "memory usage: 244.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
