Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,7 @@
    "source": [
     "import datetime\n",
     "# Your code here\n",
-    "df['month'] = df.date.map(lambda x: pd.to_datetime(x).month)"
+    "df.date.map(lambda x: pd.to_datetime(x).month)"
    ]
   },
   {
