Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -340,7 +340,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "df['comment_length'] = df.text.map(lambda x: len(x.split()))\n",
+    "df['comment_length'] = df.text.map(lambda x: len(x.split())).mean()\n",
     "df.comment_length.mean()"
    ]
   },
