Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -324,24 +324,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "77.06551724137931"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here\n",
-    "df['comment_length'] = df.text.map(lambda x: len(x.split())).mean()\n",
-    "df.comment_length.mean()"
+    "df['comment_length'] = df.text.map(lambda x: len(x.split())).mean()"
    ]
   },
   {
