Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -329,7 +329,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "df['comment_length'] = df.text.map(lambda x: len(x.split())).mean()"
+    "df['comment_length'] = df.text.map(lambda x: len(x.split()))"
    ]
   },
   {
