Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -324,12 +324,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "77.06551724137931"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
-    "df.text.map(lambda x: len(x.split()))"
+    "df.text.map(lambda x: len(x.split())).mean()"
    ]
   },
   {
@@ -368,7 +379,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "df.text.map(lambda x: len(x.split()))\n"
+    "ddf.text.map(lambda x: len(x.split()))\n"
    ]
   },
   {
