Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -379,7 +379,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "ddf.text.map(lambda x: len(x.split()))\n"
+    "df[\"review_length\"] = df.text.map(lambda x: len(x.split()))\n"
    ]
   },
   {
