Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -397,6 +397,7 @@
        "      <th>user_id</th>\n",
        "      <th>stars_squared</th>\n",
        "      <th>review_length</th>\n",
+       "      <th>Review_length</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -413,6 +414,7 @@
        "      <td>msQe1u7Z_XuqjGoqhB0J5g</td>\n",
        "      <td>25</td>\n",
        "      <td>58</td>\n",
+       "      <td>Long</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
@@ -427,6 +429,7 @@
        "      <td>msQe1u7Z_XuqjGoqhB0J5g</td>\n",
        "      <td>1</td>\n",
        "      <td>30</td>\n",
+       "      <td>Long</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -441,6 +444,7 @@
        "      <td>msQe1u7Z_XuqjGoqhB0J5g</td>\n",
        "      <td>25</td>\n",
        "      <td>30</td>\n",
+       "      <td>Long</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
@@ -455,6 +459,7 @@
        "      <td>msQe1u7Z_XuqjGoqhB0J5g</td>\n",
        "      <td>1</td>\n",
        "      <td>82</td>\n",
+       "      <td>Long</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>10</td>\n",
@@ -469,6 +474,7 @@
        "      <td>TlvV-xJhmh7LCwJYXkV-cg</td>\n",
        "      <td>25</td>\n",
        "      <td>32</td>\n",
+       "      <td>Long</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -489,15 +495,15 @@
        "5       1  This place sucks. The customer service is horr...       2   \n",
        "10      5  I have been an Emerald Club member for a numbe...       0   \n",
        "\n",
-       "                   user_id  stars_squared  review_length  \n",
-       "1   msQe1u7Z_XuqjGoqhB0J5g             25             58  \n",
-       "2   msQe1u7Z_XuqjGoqhB0J5g              1             30  \n",
-       "4   msQe1u7Z_XuqjGoqhB0J5g             25             30  \n",
-       "5   msQe1u7Z_XuqjGoqhB0J5g              1             82  \n",
-       "10  TlvV-xJhmh7LCwJYXkV-cg             25             32  "
+       "                   user_id  stars_squared  review_length Review_length  \n",
+       "1   msQe1u7Z_XuqjGoqhB0J5g             25             58          Long  \n",
+       "2   msQe1u7Z_XuqjGoqhB0J5g              1             30          Long  \n",
+       "4   msQe1u7Z_XuqjGoqhB0J5g             25             30          Long  \n",
+       "5   msQe1u7Z_XuqjGoqhB0J5g              1             82          Long  \n",
+       "10  TlvV-xJhmh7LCwJYXkV-cg             25             32          Long  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
