Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,7 @@
     "        return 'Long'\n",
     "# Hint: nest your if, else conditionals\n",
     "\n",
-    "df['Review_length'] = df.text.map(lambda x: 'Short' if len(x) < 50 else ('Medium' if len(x) < 80 else 'Long')"
+    "df['Review_length'] = df.text.map(lambda x: 'Short' if len(x) < 50 else ('Medium' if len(x) < 80 else 'Long'))\n"
    ]
   },
   {
