Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -523,9 +523,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Long      2563\n",
+       "Medium      40\n",
+       "Short        7\n",
+       "Name: Review_length, dtype: int64"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Rewrite the following function as a lambda function\n",
     "def rewrite_as_lambda(value):\n",
@@ -538,7 +552,7 @@
     "# Hint: nest your if, else conditionals\n",
     "\n",
     "df['Review_length'] = df.text.map(lambda x: 'Short' if len(x) < 50 else ('Medium' if len(x) < 80 else 'Long'))\n",
-    "df.Review_length.value"
+    "df.Review_length.value_counts()"
    ]
   },
   {
