Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -523,19 +523,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Long      2563\n",
-       "Medium      40\n",
-       "Short        7\n",
+       "Short     1287\n",
+       "Long       769\n",
+       "Medium     554\n",
        "Name: Review_length, dtype: int64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,8 +551,8 @@
     "        return 'Long'\n",
     "# Hint: nest your if, else conditionals\n",
     "\n",
-    "df['Review_length'] = df.review_length.map(lambda x: 'Short' if x < 50 else ('Medium' if len(x < 80 else 'Long'))\n",
-    "df.Review_length.value_counts()"
+    "df['Review_length'] = df.review_length.map(lambda x: 'Short' if x < 50 else ('Medium' if x < 80 else 'Long'))\n",
+    "df.Review_length.value_counts(nora)"
    ]
   },
   {
