Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -652,7 +652,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "df['date'] = df['date'].map(lambda x: '{}-{}-{}'')\n"
+    "df['date'] = df['date'].map(lambda x: '{}-{}-{}'.format(xp[]))\n"
    ]
   },
   {
